<resources>
    <string name="app_name">Prefx</string>
    <string name="register.footer"></string>
    <string name="sms_select_country">Select your country</string>
    <string name="sms_provider_prompt">Select sms provider</string>
    <string name="text_select_phone_number">Enter your phone number and preferred sms type, then press continue:</string>
 	<string name="text_btn_submit_update">Update</string>
 	<string name="text_btn_clear_data">Clear persistency</string>
 	<string name="text_btn_show_all">Show all</string>
 	<string name="text_btn_add_mapping">Add</string>
 	<string name="text_list_empty">No contacts match search</string>
 	<string name="text_recent_list_empty">No recent contacts</string>
 	<string name="text_prefx_only_list_empty">No prefx contacts match search</string>
 	<string name="add_phone">Add phone</string>
 	<string name="phoneList">Prefx</string>
 	<string name="text_btn_submit">Submit</string>
 	<string name="registration">Prefix registration</string>
 	<string name="textRegistrationQuestion">Preferred messaging system:</string>
 	<string name="textViewPhone">Phone number:</string>
 	<string name="textViewDash">-</string>
 	<string name="text_btn_next">Next</string>
 	<string name="textViewWelcome">Welcome to Prefx!</string>
 	<string name="textViewAbout">Pick your preferred messaging channel so friends contact U the way U choose!</string>
    <string name="about">About</string>
    <string name="app_name_full">Prefx Messaging Redirection</string>
    <string name="splash_copyright"></string>
    <string name="about_copyright"></string>
    <string name="btn_continue">Continue</string>
    <string name="splash_list_footer"></string>
    <string name="splash_list_s1">Pick your preferred messaging channel so friends contact U the way U choose!</string>
    <string name="splash_list_s2">Prefx let you send messages to your firends the way they prefer so they will surely be reached</string>
    <string name="splash_welcome">Welcome to Prefx!</string>
    <string name="logo">logo</string>
    <string name="AD">Andorra</string>
    <string name="AE">United Arab Emirates</string>
    <string name="AF">Afghanistan</string>
    <string name="AG">Antigua and Barbuda</string>
    <string name="AI">Anguilla</string>
    <string name="AL">Albania</string>
    <string name="AM">Armenia</string>
    <string name="AN">Netherlands Antilles</string>
    <string name="AO">Angola</string>
    <string name="AQ">Antarctica</string>
    <string name="AR">Argentina</string>
    <string name="AS">American Samoa</string>
    <string name="AT">Austria</string>
    <string name="AU">Australia</string>
    <string name="AW">Aruba</string>
    <string name="AZ">Azerbaijan</string>
    <string name="BA">Bosnia and Herzegovina</string>
    <string name="BB">Barbados</string>
    <string name="BD">Bangladesh</string>
    <string name="BE">Belgium</string>
    <string name="BF">Burkina Faso</string>
    <string name="BG">Bulgaria</string>
    <string name="BH">Bahrain</string>
    <string name="BI">Burundi</string>
    <string name="BJ">Benin</string>
    <string name="BM">Bermuda</string>
    <string name="BN">Brunei Darussalam</string>
    <string name="BO">Bolivia</string>
    <string name="BR">Brazil</string>
    <string name="BS">Bahama</string>
    <string name="BT">Bhutan</string>
    <string name="BW">Botswana</string>
    <string name="BY">Belarus</string>
    <string name="BZ">Belize</string>
    <string name="CA">Canada</string>
    <string name="CC">Cocos (Keeling) Islands</string>
    <string name="CF">Central African Republic</string>
    <string name="CG">Congo</string>
    <string name="CH">Switzerland</string>
    <string name="CI">Ivory Coast</string>
    <string name="CK">Cook Iislands</string>
    <string name="CL">Chile</string>
    <string name="CM">Cameroon</string>
    <string name="CN">China</string>
    <string name="CO">Colombia</string>
    <string name="CR">Costa Rica</string>
    <string name="CU">Cuba</string>
    <string name="CV">Cape Verde</string>
    <string name="CX">Christmas Island</string>
    <string name="CY">Cyprus</string>
    <string name="CZ">Czech Republic</string>
    <string name="DE">Germany</string>
    <string name="DG">Diego Garcia</string>
    <string name="DJ">Djibouti</string>
    <string name="DK">Denmark</string>
    <string name="DM">Dominica</string>
    <string name="DO">Dominican Republic</string>
    <string name="DZ">Algeria</string>
    <string name="EC">Ecuador</string>
    <string name="EE">Estonia</string>
    <string name="EG">Egypt</string>
    <string name="ER">Eritrea</string>
    <string name="ES">Spain</string>
    <string name="ET">Ethiopia</string>
    <string name="FI">Finland</string>
    <string name="FJ">Fiji</string>
    <string name="FK">Falkland Islands (Malvinas)</string>
    <string name="FM">Micronesia</string>
    <string name="FO">Faroe Islands</string>
    <string name="FR">France</string>
    <string name="GA">Gabon</string>
    <string name="GB">United Kingdom (Great Britain)</string>
    <string name="GD">Grenada</string>
    <string name="GE">Georgia</string>
    <string name="GF">French Guiana</string>
    <string name="GH">Ghana</string>
    <string name="GI">Gibraltar</string>
    <string name="GL">Greenland</string>
    <string name="GM">Gambia</string>
    <string name="GN">Guinea</string>
    <string name="GP">Guadeloupe</string>
    <string name="GQ">Equatorial Guinea</string>
    <string name="GR">Greece</string>
    <string name="GT">Guatemala</string>
    <string name="GU">Guam</string>
    <string name="GW">Guinea-Bissau</string>
    <string name="GY">Guyana</string>
    <string name="HK">Hong Kong</string>
    <string name="HN">Honduras</string>
    <string name="HR">Croatia</string>
    <string name="HT">Haiti</string>
    <string name="HU">Hungary</string>
    <string name="ID">Indonesia</string>
    <string name="IE">Ireland</string>
    <string name="IL">Israel</string>
    <string name="IN">India</string>
    <string name="IQ">Iraq</string>
    <string name="IR">Islamic Republic of Iran</string>
    <string name="IS">Iceland</string>
    <string name="IT">Italy</string>
    <string name="JM">Jamaica</string>
    <string name="JO">Jordan</string>
    <string name="JP">Japan</string>
    <string name="KE">Kenya</string>
    <string name="KG">Kyrgyzstan</string>
    <string name="KH">Cambodia</string>
    <string name="KI">Kiribati</string>
    <string name="KM">Comoros</string>
    <string name="KN">St. Kitts and Nevis</string>
    <string name="KP">"Korea, Democratic People's Republic of"</string>
    <string name="KR">Korea, Republic of</string>
    <string name="KW">Kuwait</string>
    <string name="KY">Cayman Islands</string>
    <string name="KZ">Kazakhstan</string>
    <string name="LA">"Lao People's Democratic Republic"</string>
    <string name="LB">Lebanon</string>
    <string name="LC">Saint Lucia</string>
    <string name="LI">Liechtenstein</string>
    <string name="LK">Sri Lanka</string>
    <string name="LR">Liberia</string>
    <string name="LS">Lesotho</string>
    <string name="LT">Lithuania</string>
    <string name="LU">Luxembourg</string>
    <string name="LV">Latvia</string>
    <string name="LY">Libyan Arab Jamahiriya</string>
    <string name="MA">Morocco</string>
    <string name="MC">Monaco</string>
    <string name="MD">Moldova, Republic of</string>
    <string name="MG">Madagascar</string>
    <string name="MH">Marshall Islands</string>
    <string name="ML">Mali</string>
    <string name="MN">Mongolia</string>
    <string name="MM">Myanmar</string>
    <string name="MO">Macau</string>
    <string name="MP">Northern Mariana Islands</string>
    <string name="MQ">Martinique</string>
    <string name="MR">Mauritania</string>
    <string name="MS">Monserrat</string>
    <string name="MT">Malta</string>
    <string name="MU">Mauritius</string>
    <string name="MV">Maldives</string>
    <string name="MW">Malawi</string>
    <string name="MX">Mexico</string>
    <string name="MY">Malaysia</string>
    <string name="MZ">Mozambique</string>
    <string name="NA">Namibia</string>
    <string name="NC">New Caledonia</string>
    <string name="NE">Niger</string>
    <string name="NG">Nigeria</string>
    <string name="NI">Nicaragua</string>
    <string name="NL">Netherlands</string>
    <string name="NO">Norway</string>
    <string name="NP">Nepal</string>
    <string name="NR">Nauru</string>
    <string name="NU">Niue</string>
    <string name="NZ">New Zealand</string>
    <string name="OM">Oman</string>
    <string name="PA">Panama</string>
    <string name="PE">Peru</string>
    <string name="PF">French Polynesia</string>
    <string name="PG">Papua New Guinea</string>
    <string name="PH">Philippines</string>
    <string name="PK">Pakistan</string>
    <string name="PL">Poland</string>
    <string name="PM">St. Pierre and Miquelon</string>
    <string name="PN">Pitcairn</string>
    <string name="PR">Puerto Rico</string>
    <string name="PS">Palestinian Authority</string>
    <string name="PT">Portugal</string>
    <string name="PW">Palau</string>
    <string name="PY">Paraguay</string>
    <string name="QA">Qatar</string>
    <string name="RO">Romania</string>
    <string name="RU">Russian Federation</string>
    <string name="RW">Rwanda</string>
    <string name="SA">Saudi Arabia</string>
    <string name="SB">Solomon Islands</string>
    <string name="SC">Seychelles</string>
    <string name="SD">Sudan</string>
    <string name="SE">Sweden</string>
    <string name="SG">Singapore</string>
    <string name="SH">St. Helena</string>
    <string name="SI">Slovenia</string>
    <string name="SK">Slovakia</string>
    <string name="SL">Sierra Leone</string>
    <string name="SM">San Marino</string>
    <string name="SN">Senegal</string>
    <string name="SO">Somalia</string>
    <string name="SR">Suriname</string>
    <string name="SS">South Sudan</string>
    <string name="ST">Sao Tome and Principe</string>
    <string name="SV">El Salvador</string>
    <string name="SY">Syrian Arab Republic</string>
    <string name="SZ">Swaziland</string>
    <string name="TC">Turks and Caicos Islands</string>
    <string name="TD">Chad</string>
    <string name="TG">Togo</string>
    <string name="TH">Thailand</string>
    <string name="TJ">Tajikistan</string>
    <string name="TK">Tokelau</string>
    <string name="TM">Turkmenistan</string>
    <string name="TN">Tunisia</string>
    <string name="TO">Tonga</string>
    <string name="TR">Turkey</string>
    <string name="TT">Trinidad and Tobago</string>
    <string name="TV">Tuvalu</string>
    <string name="TW">Taiwan</string>
    <string name="TZ">Tanzania, United Republic of</string>
    <string name="UA">Ukraine</string>
    <string name="UG">Uganda</string>
    <string name="US">United States of America</string>
    <string name="UY">Uruguay</string>
    <string name="UZ">Uzbekistan</string>
    <string name="VA">Vatican City State (Holy See)</string>
    <string name="VC">St. Vincent and the Grenadines</string>
    <string name="VE">Venezuela</string>
    <string name="VG">British Virgin Islands</string>
    <string name="VI">United States Virgin Islands</string>
    <string name="VN">Viet Nam</string>
    <string name="VU">Vanuatu</string>
    <string name="WF">Wallis and Futuna Islands</string>
    <string name="WS">Samoa</string>
    <string name="YE">Yemen</string>
    <string name="YT">Mayotte</string>
    <string name="ZA">South Africa</string>
    <string name="ZM">Zambia</string>
    <string name="ZW">Zimbabwe</string>
    <string name="MK">Macedonia</string>
    <string name="ME">Montenegro</string>
    <string name="BL">Saint Barthelemy</string>
    <string name="MF">Saint Martin</string>
    <string name="RS">Serbia</string>
    <string name="CD">Democratic Republic of the Congo</string>
    <string name="IM">Isle of Man</string>
    <string name="TL">Timor-Leste</string>
</resources>