<?xml version="1.0" encoding="utf-8"?>
<countries>
    <country code="AF" title="@string/AF" idd="93" local="0"/>
    <country code="AL" title="@string/AL" idd="355" local="0"/>
    <country code="AD" title="@string/AD" idd="376" local="0"/>
    <country code="AO" title="@string/AO" idd="244" local="0"/>
    <country code="AI" title="@string/AI" idd="1" local="0"/>
    <country code="AG" title="@string/AG" idd="1" local="0"/>
    <country code="AQ" title="@string/AQ" idd="672" local="0"/>
    <country code="AR" title="@string/AR" idd="54" local="0"/>
    <country code="AS" title="@string/AS" idd="1" local="0"/>
    <country code="AM" title="@string/AM" idd="374" local="0"/>
    <country code="AT" title="@string/AT" idd="43" local="0"/>
    <country code="AU" title="@string/AU" idd="61" local="0"/>
    <country code="AW" title="@string/AW" idd="297" local="0"/>
    <country code="AZ" title="@string/AZ" idd="994" local="0"/>

    <country code="BS" title="@string/BS" idd="1" local="0"/>
    <country code="BH" title="@string/BH" idd="973" local="0"/>
    <country code="BD" title="@string/BD" idd="880" local="0"/>
    <country code="BB" title="@string/BB" idd="1" local="0"/>
    <country code="BY" title="@string/BY" idd="375" local="80"/>
    <country code="BE" title="@string/BE" idd="32" local="0"/>
    <country code="BZ" title="@string/BZ" idd="501" local="0"/>
    <country code="BJ" title="@string/BJ" idd="229" local="0"/>
    <country code="BL" title="@string/BL" idd="590" local="0"/>
    <country code="BM" title="@string/BM" idd="1" local="0"/><!--1441-->
    <country code="BT" title="@string/BT" idd="975" local="0"/>
    <country code="BO" title="@string/BO" idd="591" local="0"/>
    <country code="BA" title="@string/BA" idd="387" local="0"/>
    <country code="BW" title="@string/BW" idd="267" local="0"/>
    <country code="BR" title="@string/BR" idd="55" local="0"/>
    <country code="VG" title="@string/VG" idd="1" local="0"/><!--1284-->
    <country code="BN" title="@string/BN" idd="673" local="0"/>
    <country code="BG" title="@string/BG" idd="359" local="0"/>
    <country code="BF" title="@string/BF" idd="226" local="0"/>
    <country code="MM" title="@string/MM" idd="95" local="0"/>
    <country code="BI" title="@string/BI" idd="257" local="0"/>
    <country code="KH" title="@string/KH" idd="855" local="0"/>

    <country code="CA" title="@string/CA" idd="1" local="0"/>
    <country code="CC" idd="61" title="@string/CC" local="0"/>
    <country code="CD" idd="243" title="@string/CD" local="0"/>
    <country code="KY" title="@string/KY" idd="1" local="0"/><!--1345-->
    <country code="CF" title="@string/CF" idd="236" local="0"/>
    <country code="TD" title="@string/TD" idd="235" local="0"/>
    <country code="KM" idd="269" title="@string/KM" local="0"/>
    <country code="HR" idd="385" title="@string/HR" local="0"/>
    <country code="CG" title="@string/CG" idd="242" local="0"/>
    <country code="CH" title="@string/CH" idd="41" local="0"/>
    <country code="CI" title="@string/CI" idd="225" local="0"/>
    <country code="CK" idd="682" title="@string/CK" local="0"/>
    <country code="CL" title="@string/CL" idd="56" local="0"/>
    <country code="CM" title="@string/CM" idd="237" local="0"/>
    <country code="CN" title="@string/CN" idd="86" local="0"/>
    <country code="CO" idd="57" title="@string/CO" local="0"/>
    <country code="CR" idd="506" title="@string/CR" local="0"/>
    <country code="CU" idd="53" title="@string/CU" local="0"/>
    <country code="CV" title="@string/CV" idd="238" local="0"/>
    <country code="CX" idd="61" title="@string/CX" local="0"/>
    <country code="CY" idd="357" title="@string/CY" local="0"/>
    <country code="CZ" idd="420" title="@string/CZ" local="0"/>

    <country code="DE" title="@string/DE" idd="49" local="0"/>
    <country code="DG" title="@string/DG" idd="246" local="0"/>
    <country code="DJ" idd="253" title="@string/DJ" local="0"/>
    <country code="DK" idd="45" title="@string/DK" local="0"/>
    <country code="DM" idd="1" title="@string/DM" local="0"/><!--1767-->
    <country code="DO" idd="1" title="@string/DO" local="0"/><!--1809-->
    <country code="DZ" title="@string/DZ" idd="213" local="0"/>

    <country code="EC" idd="593" title="@string/EC" local="0"/>
    <country code="EE" title="@string/EE" idd="372" local="0"/>
    <country code="EG" idd="20" title="@string/EG" local="0"/>
    <country code="SV" title="@string/SV" idd="503" local="0"/>
    <country code="GQ" title="@string/GQ" idd="240" local="0"/>
    <country code="ER" title="@string/ER" idd="291" local="0"/>
    <country code="ET" title="@string/ET" idd="251" local="0"/>
    <country code="FK" title="@string/FK" idd="500" local="0"/>
    <country code="FO" title="@string/FO" idd="298" local="0"/>
    <country code="FJ" title="@string/FJ" idd="679" local="0"/>
    <country code="FI" title="@string/FI" idd="358" local="0"/>
    <country code="FR" title="@string/FR" idd="33" local="0"/>
    <country code="PF" title="@string/PF" idd="689" local="0"/>
    <country code="GA" title="@string/GA" idd="241" local="0"/>
    <country code="GM" title="@string/GM" idd="220" local="0"/>
    <country code="GE" title="@string/GE" idd="995" local="0"/>
    <country code="GF" title="@string/GF" idd="594" local="0"/>
    
    <country code="GH" title="@string/GH" idd="233" local="0"/>
    <country code="GI" title="@string/GI" idd="350" local="0"/>
    <country code="GR" title="@string/GR" idd="30" local="0"/>
    <country code="GL" title="@string/GL" idd="299" local="0"/>
    <country code="GP" title="@string/GP" idd="590" local="0"/>
    <country code="GD" title="@string/GD" idd="1" local="0"/><!--1473-->
    <country code="GU" title="@string/GU" idd="1" local="0"/><!--1671-->
    <country code="GT" title="@string/GT" idd="502" local="0"/>
    <country code="GN" title="@string/GN" idd="224" local="0"/>
    <country code="GW" title="@string/GW" idd="245" local="0"/>
    <country code="GY" title="@string/GY" idd="592" local="0"/>
    <country code="HT" title="@string/HT" idd="509" local="0"/>
    <country code="VA" title="@string/VA" idd="39" local="0"/>
    <country code="HN" title="@string/HN" idd="504" local="0"/>
    <country code="HK" title="@string/HK" idd="852" local="0"/>
    <country code="HU" title="@string/HU" idd="36" local="0"/>
    <country code="IS" title="@string/IS" idd="354" local="0"/>
    <country code="IN" title="@string/IN" idd="91" local="0"/>
    <country code="ID" title="@string/ID" idd="62" local="0"/>
    <country code="IR" title="@string/IR" idd="98" local="0"/>
    <country code="IQ" title="@string/IQ" idd="964" local="0"/>
    <country code="IE" title="@string/IE" idd="353" local="0"/>
    <country code="IM" title="@string/IM" idd="44" local="0"/>
    <country code="IL" title="@string/IL" idd="972" local="0"/>
    <country code="IT" title="@string/IT" idd="39" local="0"/>

    <country code="JM" title="@string/JM" idd="1" local="0"/><!--1876-->
    <country code="JP" title="@string/JP" idd="81" local="0"/>
    <country code="JO" title="@string/JO" idd="962" local="0"/>
    <country code="KZ" title="@string/KZ" idd="7" local="0"/>
    <country code="KE" title="@string/KE" idd="254" local="0"/>
    <country code="KI" title="@string/KI" idd="686" local="0"/>
    <country code="KW" title="@string/KW" idd="965" local="0"/>
    <country code="KG" title="@string/KG" idd="996" local="0"/>
    <country code="LA" title="@string/LA" idd="856" local="0"/>
    <country code="LV" title="@string/LV" idd="371" local="0"/>
    <country code="LB" title="@string/LB" idd="961" local="0"/>
    <country code="LS" title="@string/LS" idd="266" local="0"/>
    <country code="LR" title="@string/LR" idd="231" local="0"/>
    <country code="LY" title="@string/LY" idd="218" local="0"/>
    <country code="LI" title="@string/LI" idd="423" local="0"/>
    <country code="LT" title="@string/LT" idd="370" local="0"/>
    <country code="LU" title="@string/LU" idd="352" local="0"/>
    <country code="MO" title="@string/MO" idd="853" local="0"/>
    <country code="MK" title="@string/MK" idd="389" local="0"/>
    <country code="MG" title="@string/MG" idd="261" local="0"/>
    <country code="MH" title="@string/MH" idd="692" local="0"/>
    <country code="MW" title="@string/MW" idd="265" local="0"/>
    <country code="MY" title="@string/MY" idd="60" local="0"/>
    <country code="MV" title="@string/MV" idd="960" local="0"/>
    <country code="ML" title="@string/ML" idd="223" local="0"/>
    <country code="MT" title="@string/MT" idd="356" local="0"/>
    <country code="MR" title="@string/MR" idd="222" local="0"/>
    <country code="MU" title="@string/MU" idd="230" local="0"/>
    <country code="YT" title="@string/YT" idd="262" local="0"/>
    <country code="MX" title="@string/MX" idd="52" local="0"/>
    <country code="FM" title="@string/FM" idd="691" local="0"/>
    <country code="MD" title="@string/MD" idd="373" local="0"/>
    <country code="MC" title="@string/MC" idd="377" local="0"/>
    <country code="MN" title="@string/MN" idd="976" local="0"/>
    <country code="ME" title="@string/ME" idd="382" local="0"/>
    <country code="MS" title="@string/MS" idd="1" local="0"/><!--1664-->
    <country code="MA" title="@string/MA" idd="212" local="0"/>
    <country code="MQ" title="@string/MQ" idd="596" local="0"/>
    <country code="MZ" title="@string/MZ" idd="258" local="0"/>
    <country code="NA" title="@string/NA" idd="264" local="0"/>
    <country code="NR" title="@string/NR" idd="674" local="0"/>
    <country code="NP" title="@string/NP" idd="977" local="0"/>
    <country code="NL" title="@string/NL" idd="31" local="0"/>
    <country code="AN" title="@string/AN" idd="599" local="0"/>
    <country code="NC" title="@string/NC" idd="687" local="0"/>
    <country code="NZ" title="@string/NZ" idd="64" local="0"/>
    <country code="NI" title="@string/NI" idd="505" local="0"/>
    <country code="NE" title="@string/NE" idd="227" local="0"/>
    <country code="NG" title="@string/NG" idd="234" local="0"/>
    <country code="NU" title="@string/NU" idd="683" local="0"/>
    <country code="KP" title="@string/KP" idd="850" local="0"/>
    <country code="MP" title="@string/MP" idd="1" local="0"/><!--1670-->
    <country code="NO" title="@string/NO" idd="47" local="0"/>
    <country code="OM" title="@string/OM" idd="968" local="0"/>
    <country code="PK" title="@string/PK" idd="92" local="0"/>
    <country code="PW" title="@string/PW" idd="680" local="0"/>
    <country code="PA" title="@string/PA" idd="507" local="0"/>
    <country code="PG" title="@string/PG" idd="675" local="0"/>
    <country code="PY" title="@string/PY" idd="595" local="0"/>
    <country code="PE" title="@string/PE" idd="51" local="0"/>
    <country code="PH" title="@string/PH" idd="63" local="0"/>
    <country code="PN" title="@string/PN" idd="870" local="0"/>
    <country code="PL" title="@string/PL" idd="48" local="0"/>
    <country code="PT" title="@string/PT" idd="351" local="0"/>
    <country code="PR" title="@string/PR" idd="1" local="0"/>
    <country code="PS" title="@string/PS" idd="970" local="0"/>
    <country code="QA" title="@string/QA" idd="974" local="0"/>

    <country code="RO" title="@string/RO" idd="40" local="0"/>
    <country code="RU" title="@string/RU" idd="7" local="0"/>
    <country code="RW" title="@string/RW" idd="250" local="0"/>

    <country code="SH" title="@string/SH" idd="290" local="0"/>
    <country code="KN" title="@string/KN" idd="1" local="0"/><!--1869-->
    <country code="LC" title="@string/LC" idd="1" local="0"/><!--1758-->
    <country code="MF" title="@string/MF" idd="599" local="0"/><!--1599-->
    <country code="PM" title="@string/PM" idd="508" local="0"/>
    <country code="VC" title="@string/VC" idd="1" local="0"/><!--1784-->
    <country code="WS" title="@string/WS" idd="685" local="0"/>
    <country code="SM" title="@string/SM" idd="378" local="0"/>
    <country code="ST" title="@string/ST" idd="239" local="0"/>
    <country code="SA" title="@string/SA" idd="966" local="0"/>
    <country code="SN" title="@string/SN" idd="221" local="0"/>
    <country code="RS" title="@string/RS" idd="381" local="0"/>
    <country code="SC" title="@string/SC" idd="248" local="0"/>
    <country code="SL" title="@string/SL" idd="232" local="0"/>
    <country code="SG" title="@string/SG" idd="65" local="0"/>
    <country code="SK" title="@string/SK" idd="421" local="0"/>
    <country code="SI" title="@string/SI" idd="386" local="0"/>
    <country code="SB" title="@string/SB" idd="677" local="0"/>
    <country code="SO" title="@string/SO" idd="252" local="0"/>
    <country code="ZA" title="@string/ZA" idd="27" local="0"/>
    <country code="KR" title="@string/KR" idd="82" local="0"/>
    <country code="ES" title="@string/ES" idd="34" local="0"/>
    <country code="LK" title="@string/LK" idd="94" local="0"/>
    <country code="SD" title="@string/SD" idd="249" local="0"/>
    <country code="SS" title="@string/SS" idd="211" local="0"/>
    <country code="SR" title="@string/SR" idd="597" local="0"/>
    <country code="SZ" title="@string/SZ" idd="268" local="0"/>
    <country code="SE" title="@string/SE" idd="46" local="0"/>

    <country code="SY" title="@string/SY" idd="963" local="0"/>
    <country code="TW" title="@string/TW" idd="886" local="0"/>
    <country code="TJ" title="@string/TJ" idd="992" local="0"/>
    <country code="TZ" title="@string/TZ" idd="255" local="0"/>
    <country code="TH" title="@string/TH" idd="66" local="0"/>
    <country code="TL" title="@string/TL" idd="670" local="0"/>
    <country code="TG" title="@string/TG" idd="228" local="0"/>
    <country code="TK" title="@string/TK" idd="690" local="0"/>
    <country code="TO" title="@string/TO" idd="676" local="0"/>
    <country code="TT" title="@string/TT" idd="1" local="0"/><!--1868-->
    <country code="TN" title="@string/TN" idd="216" local="0"/>
    <country code="TR" title="@string/TR" idd="90" local="0"/>
    <country code="TM" title="@string/TM" idd="993" local="0"/>
    <country code="TC" title="@string/TC" idd="1" local="0"/><!--1649-->
    <country code="TV" title="@string/TV" idd="688" local="0"/>
    <country code="UG" title="@string/UG" idd="256" local="0"/>
    <country code="UA" title="@string/UA" idd="380" local="0"/>
    <country code="AE" title="@string/AE" idd="971" local="0"/>
    <country code="GB" title="@string/GB" idd="44" local="0"/>
    <country code="US" title="@string/US" idd="1" local="0"/>
    <country code="UY" title="@string/UY" idd="598" local="0"/>
    <country code="VI" title="@string/VI" idd="1" local="0"/><!--1340-->
    <country code="UZ" title="@string/UZ" idd="998" local="0"/>
    <country code="VU" title="@string/VU" idd="678" local="0"/>
    <country code="VE" title="@string/VE" idd="58" local="0"/>
    <country code="VN" title="@string/VN" idd="84" local="0"/>
    <country code="WF" title="@string/WF" idd="681" local="0"/>
    <country code="YE" title="@string/YE" idd="967" local="0"/>
    <country code="ZM" title="@string/ZM" idd="260" local="0"/>
    <country code="ZW" title="@string/ZW" idd="263" local="0"/>

</countries>
