<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black" >

    <ImageView android:id="@id/logo" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/prefx_icon" android:scaleType="fitCenter" android:layout_alignParentTop="true" android:contentDescription="@string/logo"/>
    <ScrollView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="42.0dip" android:layout_below="@id/logo">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/welcome" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:text="@string/splash_welcome" />
            <TableLayout android:id="@id/list" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/welcome">
                <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textColor="@color/white" android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="1" android:text="-   " />
                    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:paddingRight="40.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="2" android:text="@string/splash_list_s1" android:singleLine="false" />
                    </LinearLayout>
                </TableRow>
                <TableRow android:id="@id/item2" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textColor="@color/white" android:paddingLeft="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="1" android:text="-   " />
                    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:paddingRight="45.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="2" android:text="@string/splash_list_s2" android:singleLine="false" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/splash_list_footer" android:layout_below="@id/list" />
            <Button android:textSize="22.0sp" android:textStyle="bold" android:textColor="@color/black" android:id="@id/okBtn" android:paddingLeft="50.0dip" android:paddingRight="50.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/btn_continue" android:layout_below="@id/footer" android:layout_centerHorizontal="true" style="@style/GreyButton" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>